[workspace]

members = [
    "accelerators",
    "api",
    "cameras",
    "core",
    "filters",
    "integrators",
    "lights",
    "materials",
    "pbr-rust",
    "samplers",
    "shapes",
    "textures",
]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false