[package]
name = "accelerators"
version = "0.0.1"
authors = ["Ahmad Kabani <ahmadkabani@yahoo.com>"]
edition = "2021"

[dependencies]
core = { path = "../core" }

crossbeam-channel = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
itertools = { workspace = true }
order-stat = { workspace = true }
shared_arena = { workspace = true }
