[package]
name = "api"
version = "0.0.1"
authors = ["Ahmad Kabani <ahmadkabani@yahoo.com>"]
edition = "2021"

[dependencies]
accelerators = { path = "../accelerators" }
cameras = { path = "../cameras" }
core = { path = "../core" }
filters = { path = "../filters" }
integrators = { path = "../integrators" }
lights = { path = "../lights" }
materials = { path = "../materials" }
samplers = { path = "../samplers" }
shapes = { path = "../shapes" }
textures = { path = "../textures" }

log = "0.4.14"
pest = "2.1.3"
pest_derive = "2.1.0"
shared_arena = "0.8.4"