[package]
name = "api"
version = "0.0.1"
authors = ["Ahmad Kabani <ahmadkabani@yahoo.com>"]
edition = "2021"

[dependencies]
accelerators = { path = "../accelerators" }
cameras = { path = "../cameras" }
core = { path = "../core" }
filters = { path = "../filters" }
integrators = { path = "../integrators" }
lights = { path = "../lights" }
materials = { path = "../materials" }
media = { path = "../media" }
samplers = { path = "../samplers" }
shapes = { path = "../shapes" }
textures = { path = "../textures" }

lazy_static = { workspace = true }
log = { workspace = true }
pest = { workspace = true }
pest_consume = { workspace = true }
pest_derive = { workspace = true }
shared_arena = { workspace = true }
