[package]
name = "core"
version = "0.0.1"
authors = ["Ahmad Kabani <ahmadkabani@yahoo.com>"]
edition = "2021"

[features]
#sampled-spectrum = []

[dependencies]
arc-swap = "1.5.0"
bitflags = "1.3.2"
byteorder = "1.3.4"
clap = { version = "3.0.7", features = ["derive"] }
crossbeam-channel = "0.5.6"
either = "1.6.1"
exr = "1.3.0"
float-cmp = "0.9.0"
hexf = "0.2.1"
image = "0.23.14"
indicatif = "0.17.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.14"
num-traits = "0.2.14"
ordered-float = "2.7.0"
pest = "2.1.3"
pest_derive = "2.1.0"
regex = "1.5.4"

[dev-dependencies]
proptest = "1.0.0"
