[package]
name = "core"
version = "0.0.1"
authors = ["Ahmad Kabani <ahmadkabani@yahoo.com>"]
edition = "2021"

[features]
#sampled-spectrum = []

[dependencies]
arc-swap = { workspace = true }
bitflags = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
either = { workspace = true }
exr = { workspace = true }
float-cmp = { workspace = true }
hexf = { workspace = true }
image = { workspace = true }
indicatif = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
num-traits = { workspace = true }
ordered-float = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
proptest = "1.0.0"
