[package]
name = "integrators"
version = "0.0.1"
authors = ["Ahmad Kabani <ahmadkabani@yahoo.com>"]
edition = "2021"

[dependencies]
core = { path = "../core" }
samplers = { path = "../samplers" }

atom = "0.4.0"
indicatif = { version = "0.16.2", features = ["rayon"] }
log = "0.4.14"
rayon = "1.5.1"