[package]
name = "integrators"
version = "0.0.1"
authors = ["Ahmad Kabani <ahmadkabani@yahoo.com>"]
edition = "2021"

[dependencies]
core = { path = "../core" }
filters = { path = "../filters" }
samplers = { path = "../samplers" }

crossbeam-channel = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
