[package]
name = "pbr-rust"
version = "0.0.1"
authors = ["Ahmad Kabani <ahmadkabani@yahoo.com>"]
edition = "2018"

[dependencies]
api = { path = "../api" }
core = { path = "../core" }

dhat = { version = "0.2.4", optional = true }
env_logger = "0.9.0"
log = "0.4.14"
pest = "2.1.3"
pest_derive = "2.1.0"
rayon = "1.5.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.4.1", optional = true }

[features]
dhat-rs = ["dhat"]
jemalloc = ["tikv-jemallocator"]
